# LILYGO-T-HMI-ESP-IDF

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/appfs/: idf_component.yml
components/badgelink/: CMakeLists.txt  README.md  badgelink.c  badgelink.h  badgelink.pb.c  badgelink.pb.h  badgelink_appfs.c  badgelink_appfs.h  badgelink_fs.c  badgelink_fs.h  badgelink_internal.h  badgelink_nvs.c  badgelink_nvs.h  badgelink_startapp.c  badgelink_startapp.h  cobs.c  cobs.h  idf_component.yml
components/badgelink/mock/: CMakeLists.txt  Makefile
components/badgelink/mock/src/: main.c
components/badgelink/mock/src/appfs_mock/: appfs.c  appfs.h
components/badgelink/mock/src/esp_mock/: esp_crc.c  esp_crc.h  esp_err.c  esp_err.h  esp_err_defs.inc  esp_log.c  esp_log.h  nvs.c  nvs.h  nvs_flash.h
components/badgelink/mock/src/freertos_mock/: freertos.c
components/badgelink/mock/src/freertos_mock/freertos/: FreeRTOS.h
components/badgelink/tools/: 60-badgelink.rules  README.md  badgelink.py  badgelink.sh  install.sh  requirements.txt
components/esp-brookesia/src/gui/lvgl/: esp_brookesia_lv_object.cpp
main/: CMakeLists.txt  main.cpp
